# PARCIAL2

./: Problema.docx  ~$oblema.docx
PARCIAL2PROPIO/: CMakeLists.txt  estacion.cpp  estacion.h  linea.cpp  linea.h  main.cpp  redmetro.cpp  redmetro.h
build-PARCIAL2PROPIO-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  PRUEBA.txt  build.ninja  cmake_install.cmake
build-PARCIAL2PROPIO-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-2db41b1b534f4e49dbca.json  codemodel-v2-58eaf6c1eba68b976054.json  directory-.-Debug-c5aaa0793d8f52b506db.json  index-2024-04-27T14-12-58-0428.json  target-PARCIAL2PROPIO-Debug-0db6900fb20dfe8ddb52.json
build-PARCIAL2PROPIO-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-2d225025c272b9f7a7e3.json  cmakeFiles-v1-3fd3bf70c4bd20169671.json  codemodel-v2-c2fdc9a22ea3adbabb0c.json  directory-.-Debug-f2b180250ca2472bea51.json  index-2024-04-27T14-12-35-0078.json  target-PARCIAL2PROPIO-Debug-a89aad01ba61a82a144e.json
build-pruebaparcial2-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-pruebaparcial2-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-pruebaparcial2-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: estacion.cpp.71D90F8E9BBA6BB8.idx  estacion.h.C48E52B9103A5723.idx  (+7 more)
pruebaparcial2/: Emuladorhora.cpp  estacion.cpp  estacion.h  intento_vector.cpp  intento_vector.h  linea.cpp  linea.h  main.cpp  nodo.cpp  nodo.h  pruebaparcial2.pro  redmetro.cpp  redmetro.h
