cmake_minimum_required(VERSION 3.5)

project(PARCIAL2PROPIO LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(PARCIAL2PROPIO main.cpp
    estacion.h estacion.cpp)

include(GNUInstallDirs)
install(TARGETS PARCIAL2PROPIO
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
